# docs/swagger.json
@@ -49,7 +49,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/movies.ListsResponse"
+                            "$ref": "#/definitions/handlers.ListsResponse"
                         }
                     },
                     "400": {
@@ -318,6 +318,26 @@
                 }
             }
         },
+        "handlers.ListsResponse": {
+            "type": "object",
+            "properties": {
+                "limit": {
+                    "type": "integer"
+                },
+                "page_current": {
+                    "type": "integer"
+                },
+                "page_total": {
+                    "type": "integer"
+                },
+                "results": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.MovieWithFiles"
+                    }
+                }
+            }
+        },
         "handlers.ResponseHello": {
             "type": "object",
             "properties": {
@@ -326,41 +346,24 @@
                 }
             }
         },
-        "movies.ListsResponse": {
+        "models.BelongsToCollection": {
             "type": "object",
             "properties": {
-                "limit": {
-                    "type": "integer"
-                },
-                "page": {
-                    "type": "integer"
-                },
-                "results": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/movies.MovieDetails"
-                    }
-                },
-                "total": {
-                    "type": "integer"
-                }
-            }
-        },
-        "movies.MovieDetails": {
-            "type": "object",
-            "properties": {
-                "location": {
+                "backdrop_path": {
                     "type": "string"
                 },
-                "metadata": {
-                    "$ref": "#/definitions/movies.MovieMetadata"
-                },
-                "tmdb_id": {
+                "id": {
                     "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "poster_path": {
+                    "type": "string"
                 }
             }
         },
-        "movies.MovieMetadata": {
+        "models.MovieMetadata": {
             "type": "object",
             "properties": {
                 "adult": {
@@ -369,13 +372,10 @@
                 "backdrop_path": {
                     "type": "string"
                 },
-                "belongs_to_collection": {
-                    "$ref": "#/definitions/movies.TMDbBelongsToCollection"
-                },
                 "genres": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/movies.TMDbGenre"
+                        "$ref": "#/definitions/models.TMDbGenre"
                     }
                 },
                 "homepage": {
@@ -411,7 +411,7 @@
                 "spoken_languages": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/movies.TMDbSpokenLanguage"
+                        "$ref": "#/definitions/models.TMDbSpokenLanguage"
                     }
                 },
                 "status": {
@@ -434,35 +434,35 @@
                 }
             }
         },
-        "movies.TMDbBelongsToCollection": {
+        "models.MovieWithFiles": {
             "type": "object",
             "properties": {
-                "backdrop_path": {
+                "belongs_to_collection": {
+                    "$ref": "#/definitions/models.BelongsToCollection"
+                },
+                "location": {
                     "type": "string"
                 },
+                "metadata": {
+                    "$ref": "#/definitions/models.MovieMetadata"
+                },
+                "tmdb_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.TMDbGenre": {
+            "type": "object",
+            "properties": {
                 "id": {
                     "type": "integer"
                 },
                 "name": {
                     "type": "string"
-                },
-                "poster_path": {
-                    "type": "string"
                 }
             }
         },
-        "movies.TMDbGenre": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "movies.TMDbSpokenLanguage": {
+        "models.TMDbSpokenLanguage": {
             "type": "object",
             "properties": {
                 "iso_639_1": {
